--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-router-dom": "^6.21.0",
     "react-scripts": "^3.0.1",
     "react-stripe-elements": "^6.1.2",
     "stripe": "latest",
